--- a/kiarah.littlexavier/app/templates/statistics.html
+++ b/kiarah.littlexavier/app/templates/statistics.html
@@ -1,11 +1,33 @@
-﻿<ul class="pagination"><li class="page_first"><span>First</span></li><li class="page_prev"><span>&laquo;</span></li><li class="page_item page_current"><span>1</span></li><li class="page_next"><span>&raquo;</span></li><li class="page_last"><span>Last</span></li></ul>
-<p><a class="btn btn-blog-entry" href="#/add-or-update-statistic/{{ vm.key }}">Add</a></p>
-<div class="postList">
-    <div data-ng-repeat="statistic in vm.statistics">
-        <a class="btn btn-blog-entry" href="#/add-or-update-statistic/{{ statistic.statisticKey }}/{{ statistic.statisticId }}">Update</a>
-        <a class="btn btn-blog-entry" data-ng-click="vm.delete(statistic.statisticId)">Delete</a>
-        <div>
-            {{ statistic.date }} - {{ statistic.statisticValue }} - {{ statistic.statisticUnit }}
-        </div>
-</div>
-<ul class="pagination"><li class="page_first"><span>First</span></li><li class="page_prev"><span>&laquo;</span></li><li class="page_item page_current"><span>1</span></li><li class="page_next"><span>&raquo;</span></li><li class="page_last"><span>Last</span></li></ul>
+﻿<p><a class="btn btn-blog-entry" href="#/add-or-update-statistic/{{ vm.key }}">Add</a></p>
+<table class="table table-striped">
+    <tr>
+        <th>
+            Date
+        </th>
+        <th>
+            Value
+        </th>
+        <th>
+            Unit
+        </th>
+        <th></th>
+        <th></th>
+    </tr>
+    <tr ng-repeat="statistic in vm.statistics">
+        <td>
+            {{ statistic.date }}
+        </td>
+        <td>
+            {{ statistic.statisticValue }}
+        </td>
+        <td>
+            {{ statistic.statisticUnit }}
+        </td>
+        <td>
+            <a class="btn btn-blog-entry" href="#/add-or-update-statistic/{{ statistic.statisticKey }}/{{ statistic.statisticId }}">Update</a>
+        </td>
+        <td>
+            <a class="btn btn-default" ng-click="vm.delete(statistic.statisticId)">Delete</a>
+        </td>
+    </tr>
+</table>
