--- a/kiarah.littlexavier/app/templates/my-journey.html
+++ b/kiarah.littlexavier/app/templates/my-journey.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<p><a class="btn btn-blog-entry" href="#/add-or-update-my-journey/{{ myJournies[0].myJourneyId }}">Update</a></p>
+<div class="postList">
+    <div class="post" data-ng-repeat="myJourney in vm.myJournies">
+        <!--<a class="btn btn-blog-entry" data-ng-click="vm.delete(myJourney.myJourneyId)">Delete</a>-->
+        <h3>{{ myJourney.messageTitle }}</h3>
+        <div ta-bind ng-model="myJourney.messageBody"></div>
+        <p>By <a href="/profile/{{ myJourney.userName }}">{{ myJourney.userName }}</a> at {{ myJourney.date | date : format : shortDate }}</p>
+    </div>
+</div>
